# soviet_anime

./: README.md  pyproject.toml
anime_fastapi/: .env  database.py  main.py
tests/: test_anime_fastapi.py
